--- a/click_eat/menu/templates/menu/index.html
+++ b/click_eat/menu/templates/menu/index.html
@@ -1,22 +1,15 @@
 {% if item_list %}
-    
-    <!-- <ul>
-    {% for item in item_list %}
-        <li><a href="/menu/{{ item.id }}/">{{ item.item_name }}</a></li>
-    {% endfor %}
-    </ul>
-    -->
 
     <h1>Menu</h1>
 
     <p></p>
-    <form method="post">
+    <form action="{% url 'menu:results' %}" method="post">
     {% csrf_token %}
     {% for item in item_list %}
         <input type="checkbox" name="item" id="item{{ forloop.counter }}" value="{{ item.id }}" />
         <label for="item{{ forloop.counter }}">{{ item.item_name }}</label><br />
     {% endfor %}<p></p>
-    <input type="submit" value="Order" />
+    <input type="submit" value="Order">
     </form>
 
 {% else %}
