--- a/toy_system/choose/templates/choose/index.html
+++ b/toy_system/choose/templates/choose/index.html
@@ -1,16 +1,42 @@
-<h1>{{ "Choose the PIE" }}</h1>
 
+{% extends "base.html" %}
+{% block script %}
+<script>
+$(function(){
+	$('p.dish').click(function(){
+		console.log("aa")
+		$.post("{% url 'detail' %}",
+		{
+			'dish_id': this.id,
+			'csrfmiddlewaretoken': '{{ csrf_token }}'
+		},
+		function(data, status){
+        	$('div#dish_detail').html(data)
+    	})
+	})
+})
+</script>
+{% endblock %}
+
+{% block content %}
+
+<h1>Menu</h1>
+<hr>
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
 <form action="{% url 'submit' %}" method="post">
-name:<br>
-<input type="text" name="name">
-<br>
+<p>name: <input type="text" name="name"></p>
+<hr>
 
 {% csrf_token %}
 {% for dish in list_of_pie.all %}
-    <input type="checkbox" name="dish{{ dish.id }}" id="dish{{ forloop.counter }}" value="1" />
-    <label for="dish{{ forloop.counter }}">{{ dish.name }}</label><br />
+	<U><p class = 'dish' id = '{{dish.id}}'>{{ dish.name }} (${{dish.cost}}) </p></U>
+    <input type="number" name="dish{{ dish.id }}" id="dish{{ forloop.counter }}" value = "0" min="0" max="99"/>
+    <br>
 {% endfor %}
+<hr>
 <input type="submit" value="Submit" />
 </form>
+<div id = 'dish_detail'>
+</div>
+{% endblock %}
