--- a/toy_system/choose/templates/choose/result.html
+++ b/toy_system/choose/templates/choose/result.html
@@ -1,12 +1,17 @@
-<h1>Order Success!!</h1>
-<p>hi! {{ cust.name }}. Here is your order detail. </p>
+{% extends "base.html" %}
 
-<ul>
-{% for orderrecord in menu %}
-    <li>{{ orderrecord.name }} -- ${{ orderrecord.cost }}</li>
+{% block content %}
+
+<h1>Your Order</h1>
+<p>{{ cust.name }}. Here is your order detail. </p>
+<hr>
+{% for orderrecord in cust.cust_order.all %}
+    <p><b>{{ orderrecord.dish_id.name }}</b></p>
+    <p>${{ orderrecord.dish_id.cost }} * {{orderrecord.quantity}}</p>
 {% endfor %}
-</ul>
-
-<p> The total price is ${{cust.total_price}}</p>
+<hr>
+<p> Total price: ${{cust.total_price}}</p>
 
 <a href="{% url 'index' %}">Order again</a>
+
+{% endblock %}
